--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,10 +37,10 @@
         android:id="@+id/seek"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/service_check"
+        android:layout_alignTop="@+id/size"
         android:layout_alignBottom="@+id/size"
         android:layout_alignParentRight="true"
-        android:layout_alignTop="@+id/size"
-        android:layout_below="@id/service_check"
         android:layout_toRightOf="@id/size"
         android:max="100"
         android:progress="50" />
@@ -56,10 +56,12 @@
         android:visibility="gone" />
 
     <TextView
+        android:id="@+id/hint"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
+        android:gravity="center"
         android:text="食用方法：轻触返回，长按桌面。"
         android:textSize="18dp" />
 
