--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,15 +45,80 @@
         android:max="100"
         android:progress="50" />
 
-    <TextView
-        android:id="@+id/big"
+    <android.support.v7.widget.AppCompatTextView
+        android:id="@+id/double_click_fun"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:background="@color/colorAccent"
-        android:text="big"
-        android:textSize="30dp"
-        android:visibility="gone" />
+        android:layout_below="@+id/seek"
+        android:layout_marginTop="20dp"
+        android:text="双击"
+        android:textSize="30dp" />
+
+    <RadioGroup
+        android:id="@+id/doubleRG"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/double_click_fun"
+        android:layout_toRightOf="@+id/double_click_fun"
+        android:orientation="horizontal">
+
+        <RadioButton
+            android:id="@+id/doubleRG_home"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="true"
+            android:text="返回桌面" />
+
+        <RadioButton
+            android:id="@+id/doubleRG_recent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="近期任务" />
+
+        <RadioButton
+            android:id="@+id/doubleRG_disable"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="无效" />
+    </RadioGroup>
+
+
+    <android.support.v7.widget.AppCompatTextView
+        android:id="@+id/long_click_fun"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/double_click_fun"
+        android:layout_marginTop="20dp"
+        android:text="长按"
+        android:textSize="30dp" />
+
+    <RadioGroup
+        android:id="@+id/longRG"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/long_click_fun"
+        android:layout_toRightOf="@+id/long_click_fun"
+        android:orientation="horizontal">
+
+        <RadioButton
+            android:id="@+id/longRG_home"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="true"
+            android:text="返回桌面" />
+
+        <RadioButton
+            android:id="@+id/longRG_recent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="近期任务" />
+
+        <RadioButton
+            android:id="@+id/longRG_disable"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="无效" />
+    </RadioGroup>
 
     <TextView
         android:id="@+id/hint"
