--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,20 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <android.support.v7.widget.AppCompatTextView
-        android:id="@+id/check_hint"
-        style="@style/hintStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_top"
-        android:text="检查权限" />
-
-    <android.support.v7.widget.AppCompatCheckBox
+    <CheckBox
         android:id="@+id/full_screen_check"
         style="@style/functionStyle"
         android:layout_width="wrap_content"
@@ -24,8 +17,7 @@
         android:layout_toRightOf="@+id/check_hint"
         android:text="窗口" />
 
-
-    <android.support.v7.widget.AppCompatCheckBox
+    <CheckBox
         android:id="@+id/service_check"
         style="@style/functionStyle"
         android:layout_width="wrap_content"
@@ -35,59 +27,6 @@
         android:layout_toRightOf="@+id/full_screen_check"
         android:text="服务" />
 
-
-    <android.support.v7.widget.AppCompatTextView
-        android:id="@+id/size_hint"
-        style="@style/hintStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/service_check"
-        android:layout_marginTop="@dimen/margin_top"
-        android:text="大小" />
-
-
-    <android.support.v7.widget.AppCompatSeekBar
-        android:id="@+id/size_seek"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/service_check"
-        android:layout_alignTop="@+id/size_hint"
-        android:layout_alignBottom="@+id/size_hint"
-        android:layout_alignParentRight="true"
-        android:layout_toRightOf="@id/size_hint"
-        android:max="100"
-        android:progress="50" />
-
-
-    <android.support.v7.widget.AppCompatTextView
-        android:id="@+id/alpha_hint"
-        style="@style/hintStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/size_hint"
-        android:layout_marginTop="@dimen/margin_top"
-        android:text="透明度" />
-
-    <android.support.v7.widget.AppCompatSeekBar
-        android:id="@+id/alpha_seek"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/service_check"
-        android:layout_alignTop="@+id/alpha_hint"
-        android:layout_alignBottom="@+id/alpha_hint"
-        android:layout_alignParentRight="true"
-        android:layout_toRightOf="@id/alpha_hint"
-        android:max="100"
-        android:progress="50" />
-
-    <android.support.v7.widget.AppCompatTextView
-        android:id="@+id/doubleHint"
-        style="@style/hintStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/alpha_hint"
-        android:layout_marginTop="@dimen/margin_top"
-        android:text="双击" />
 
     <RadioGroup
         android:id="@+id/doubleRG"
@@ -122,15 +61,6 @@
     </RadioGroup>
 
 
-    <android.support.v7.widget.AppCompatTextView
-        android:id="@+id/longHint"
-        style="@style/hintStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/doubleHint"
-        android:layout_marginTop="@dimen/margin_top"
-        android:text="长按" />
-
     <RadioGroup
         android:id="@+id/longRG"
         android:layout_width="wrap_content"
@@ -161,14 +91,6 @@
             android:text="无效" />
     </RadioGroup>
 
-    <android.support.v7.widget.AppCompatTextView
-        android:id="@+id/styleHint"
-        style="@style/hintStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/longHint"
-        android:layout_marginTop="@dimen/margin_top"
-        android:text="样式" />
 
     <RadioGroup
         android:id="@+id/styleRG"
@@ -196,6 +118,14 @@
 
 
     <TextView
+        android:id="@+id/check_hint"
+        style="@style/hintStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_top"
+        android:text="检查权限" />
+
+    <TextView
         android:id="@+id/hint"
         style="@style/hintStyle"
         android:layout_width="wrap_content"
@@ -205,7 +135,6 @@
         android:gravity="center"
         android:text="食用方法：轻触返回，长按桌面。" />
 
-
     <TextView
         android:id="@+id/test"
         android:layout_width="wrap_content"
@@ -213,4 +142,85 @@
         android:background="@color/colorAccent"
         android:padding="@dimen/fun_size"
         android:text="test" />
+
+    <TextView
+        android:id="@+id/size_hint"
+        style="@style/hintStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/service_check"
+        android:layout_marginTop="@dimen/margin_top"
+        android:text="大小" />
+
+    <androidx.appcompat.widget.AppCompatSeekBar
+        android:id="@+id/size_seek"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/service_check"
+        android:layout_alignTop="@+id/size_hint"
+        android:layout_alignBottom="@+id/size_hint"
+        android:layout_alignParentRight="true"
+        android:layout_toRightOf="@id/size_hint"
+        android:max="100"
+        android:progress="50" />
+
+
+    <androidx.appcompat.widget.AppCompatSeekBar
+        android:id="@+id/alpha_seek"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/service_check"
+        android:layout_alignTop="@+id/alpha_hint"
+        android:layout_alignBottom="@+id/alpha_hint"
+        android:layout_alignParentRight="true"
+        android:layout_toRightOf="@id/alpha_hint"
+        android:max="100"
+        android:progress="50" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/alpha_hint"
+        style="@style/hintStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/size_hint"
+        android:layout_marginTop="@dimen/margin_top"
+        android:text="透明度" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/doubleHint"
+        style="@style/hintStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/alpha_hint"
+        android:layout_marginTop="@dimen/margin_top"
+        android:text="双击" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/longHint"
+        style="@style/hintStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/doubleHint"
+        android:layout_marginTop="@dimen/margin_top"
+        android:text="长按" />
+
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/styleHint"
+        style="@style/hintStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/longHint"
+        android:layout_marginTop="@dimen/margin_top"
+        android:text="样式" />
+
+
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="320dp"
+        android:layout_height="50dp"
+        android:layout_above="@+id/hint"
+        android:layout_centerHorizontal="true"
+        ads:adSize="BANNER"
+        ads:adUnitId="ca-app-pub-9740557829852500/9081441659" />
 </RelativeLayout>
